tests/out/error/type/redefinition.in.bt
struct All{}

enum All{
	default
}

struct All{}

type All := i32

interface All {}
